added more number format tests