@@ -15,12 +15,8 @@
  */
 package de.langmi.javasnippets;
 
-import java.math.RoundingMode;
-import java.text.NumberFormat;
+import static org.junit.Assert.*;
 import java.util.Locale;
-import java.util.Map;
-import java.util.Map.Entry;
-import org.apache.commons.lang.ArrayUtils;
 import org.junit.Test;
 
 /**
@@ -31,25 +27,65 @@ import org.junit.Test;
 public class NumberParseExamplesTest {
 
     /**
+     * Various parsing problems with double.
+     * 
+     * @throws Exception 
+     */
+    @Test
+    public void testDoubleParsingProblems() throws Exception {
+        // double parses just ignores and stops at wrong characters
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1@", Locale.UK));
+        // scientific notation, but wrong one, capital "E" needed, works either/sadly
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1e6", Locale.UK));
+    }
+
+    /**
+     * Test parsing with scientific notation.
+     * 
+     * @throws Exception 
+     */
+    @Test
+    public void testDoubleScientificNotation() throws Exception {
+        // Locale does not matter
+        // scientific notation, but wrong one, capital "E" needed
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1e6", Locale.GERMAN));
+        // now the right scientific notation
+        assertEquals(Double.valueOf(1000000d),
+                     NumberParseExamples.parseDouble("1E6", Locale.GERMAN));
+        // scientific notation, but wrong one, capital "E" needed
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1e6", Locale.UK));
+        // now the right scientific notation
+        assertEquals(Double.valueOf(1000000d),
+                     NumberParseExamples.parseDouble("1E6", Locale.UK));
+    }
+
+    /**
      * Test parsing with german style decimal numbers.
      * 
      * @throws Exception 
      */
     @Test
     public void testDoubleGerman() throws Exception {
-        System.out.println("testDoubleGerman");
-        this.testParse(
-                new Object[][]{
-                    {"11,01", 11.01d},
-                    {"1.000,00", 1000d},
-                    {"1,0", 1d},
-                    {"1,00", 1d},
-                    {"1,38", 1.38d},
-                    {"1e-06", 1.38d},
-                    {"1E6", 1.38d},
-                    {"1E-6", 1.38d},
-                    {"1e-6", 1.38d}},
-                Locale.GERMAN);
+        Locale locale = Locale.GERMAN;
+        // simple with comma
+        assertEquals(Double.valueOf(11.01d),
+                     NumberParseExamples.parseDouble("11,01", locale));
+        // simple with 1000 point and comma
+        assertEquals(Double.valueOf(1000d),
+                     NumberParseExamples.parseDouble("1.000,00", locale));
+        // comma just with 1
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1,0", locale));
+        // more zeroes
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1,00", locale));
+        // another one
+        assertEquals(Double.valueOf(1.38d),
+                     NumberParseExamples.parseDouble("1,38", locale));
     }
 
     /**
@@ -59,40 +95,21 @@ public class NumberParseExamplesTest {
      */
     @Test
     public void testDoubleUk() throws Exception {
-        System.out.println("testDoubleUk");
-        this.testParse(
-                new Object[][]{
-                    {"11.01", 11.01d},
-                    {"1,000.00", 1000d},
-                    {"1.0", 1d},
-                    {"1.00", 1d},
-                    {"1.38", 1.38d},
-                    {"1e-06", 1.38d},
-                    {"1E6", 1.38d},
-                    {"1E-6", 1.38d},
-                    {"1E-06", 1.38d},
-                    {"1e-6", 1.38d},
-                    {"1.0E-6", 123},
-                    {"0.000001", 1.38d},
-                    {"1@", 1.38d}},
-                Locale.UK);
-    }
-
-    /**
-     * Extracted method for convenience.
-     * 
-     * @param data
-     * @param locale
-     * @throws Exception 
-     */
-    private void testParse(Object[][] data, Locale locale) throws Exception {
-        NumberFormat f = NumberFormat.getInstance(locale);
-        Map<String, Double> map = ArrayUtils.toMap(data);
-        for (Entry<String, Double> entry : map.entrySet()) {
-            Double result = NumberParseExamples.parseDouble(entry.getKey(), locale);
-            f.setRoundingMode(RoundingMode.UNNECESSARY);
-            System.out.println(entry.getKey() + ":" + result.toString() + ":" + f.format(result) + ":" + new Float(result.floatValue()).toString());
-            //assertEquals(entry.getValue(), result);
-        }
+        Locale locale = Locale.UK;
+        // simple with comma
+        assertEquals(Double.valueOf(11.01d),
+                     NumberParseExamples.parseDouble("11.01", locale));
+        // simple with 1000 point and comma
+        assertEquals(Double.valueOf(1000d),
+                     NumberParseExamples.parseDouble("1,000.00", locale));
+        // comma just with 1
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1.0", locale));
+        // more zeroes
+        assertEquals(Double.valueOf(1d),
+                     NumberParseExamples.parseDouble("1.00", locale));
+        // another one
+        assertEquals(Double.valueOf(1.38d),
+                     NumberParseExamples.parseDouble("1.38", locale));
     }
 }
